--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Single Page Demo of Codegames, popular board game. Not owned or created by Matteo Paz, Copyright Czech Games Edition 2021">
+    <title>Codenames - Matteo Paz</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,7 +22,11 @@
     <div class="shape group-3 circle md"></div>
     <div class="shape group-3 circle md"></div>
   </div>
-  <address>Codenames - Matteo Paz - 8 / 13 / 21</address>
+  <address>
+      Codenames - Matteo Paz - 8 / 13 / 21 
+  <br>
+      COPYRIGHT CZECH GAMES EDITION 2021
+  </address>
   <div id="board">
     <div class="cell"></div>
     <div class="cell"></div>
