--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="shape group-3 circle md"></div>
   </div>
   <address>
-      Codenames - Matteo Paz - 8 / 13 / 21 
+      Codenames - Matteo Paz - 8 / 13 / 21 &nbsp; &nbsp; &nbsp; &nbsp;
       COPYRIGHT CZECH GAMES EDITION 2021
   </address>
   <div id="board">
